# waifu-diffusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
waifu_diffusion/notebooks/: stable_diffusion_example.ipynb
